--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.3.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
