--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^6.3.0",
     "cra-template": "1.3.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
