--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "antd": "^6.3.0",
     "cra-template": "1.3.0",
+    "leaflet": "^1.9.4",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1"
   },
